@@ -239,6 +239,52 @@ Message::Passing::Output::ElasticSearch - output logstash messages into ElasticS
 
 =head1 DESCRIPTION
 
+Currently this output stores messages in the logstash format:
+
+=over
+
+=item index
+
+one index per day in the format logstash-YYYY.MM.dd
+
+=item type
+
+Is taken from the '__CLASS__' attribute or set to 'unknown' if not
+defined. If is also stored in the @type field.
+
+=item id
+
+Is takes from the 'uuid' attribute or autogenerated by ElasticSearch.
+
+=item @timestamp
+
+The datetime is taken from the message epochtime or date attribute.
+
+The epochtime attribute is expected in seconds since 1.1.1970 00:00 UTC.
+
+The date attribute is expected to be a string in ISO8601 format.
+
+If both are missing the current timestamp is used. It is used to determine
+the index as well as stored in the @timestamp field.
+
+=item @tags
+
+Is set to an empty list.
+
+=item @source_host
+
+Is takes from the message hostname attribute or set to 'none' if not defined.
+
+=item @message
+
+Is taken from the 'message' attribute or the whole message gets JSON encoded.
+
+=item @fields
+
+Is set to all not otherwise processed message attributes.
+
+=back
+
 =head1 METHODS
 
 =head2 elasticsearch_servers
@@ -252,7 +298,8 @@ A boolean attribute that defaults to true if STDIN is opened to a tty.
 
 =head2 consume ($msg)
 
-Consumes a message, queuing it for consumption by ElasticSearch.
+Consumes a message, queuing it for consumption by ElasticSearch. The message
+has to be a hashref.
 
 =head1 SEE ALSO
 
