@@ -1,3 +1,5 @@
+  - Add documentation for the ElasticSearch document format
+
 0.004
   - Remove hard coded 2012
 
